test/fortio/fortio.yaml
#apiVersion: networking.k8s.io/v1beta1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fortio
  namespace: fortio
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
    - host: fortio.asm.istio.webinf.info
      http:
        paths:
            - path: /.*
              backend:
                serviceName: fortio
                servicePort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fortio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "fortio"
      hosts:
        - "fortio.asm.istio.webinf.info"
---
apiVersion: v1
kind: Service
metadata:
  name: fortio
  namespace: fortio
spec:
  ports:
  - port: 8080
    name: http-echo
  selector:
    app: fortio

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: fortio
  namespace: fortio
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        #sidecar.istio.io/logLevel: "TRACE"
        #sidecar.istio.io/enableCoreDump: "true"
        #sidecar.istio.io/privileged: "true"
        #sidecar.istio.io/debug: "true"
        #sidecar.istio.io/componentLogLevel: "config:trace,http2:trace,init:trace,grpc:trace,upstream:trace"

        policy.istio.io/check: disable
        # Override container ports
        #traffic.sidecar.istio.io/includeInboundPorts: "*"
        sidecar.istio.io/proxyCPU: "2000m"

      labels:
        app: fortio
        version: v1
    spec:
      containers:
      - name: fortio
        image: "costinm/fortio:latest"
        ports:
         - containerPort: 8080
         - containerPort: 8081
         - containerPort: 8079
        args:
          - server
        resources:
          requests:
            cpu: 800m
            memory: "1G"
          limits:
            cpu: 1000m
            memory: "1G"
