test/fortio/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  - ns.yaml
  - fortio-cli.yaml
  - fortio.yaml
  - knative-service.yaml
